--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.0.0",
+    "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
-    "prisma": "^6.0.0"
+    "prisma": "^6.0.1"
   }
 }
